analysis of climate related news, parquet formatted data and tests